<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/space"
            android:gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/grassland" />

        <ImageView
            android:layout_width="336dp"
            android:layout_height="153dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/space"
            android:src="@drawable/menu_main_title" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/mainSectionMenuContainer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="30dp" >

        <LinearLayout
            android:id="@+id/mainSectionMenuLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingRight="5dp" >

            <FrameLayout
                android:id="@+id/newGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/space"
                    android:src="@drawable/button_large_up" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_game"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/loadGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/space"
                    android:src="@drawable/button_large_up" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/load_game"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainSectionMenuRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="5dp" >

            <FrameLayout
                android:id="@+id/mainOptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/space"
                    android:src="@drawable/button_large_up" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/options"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/space"
                    android:src="@drawable/button_large_up" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/exit_game"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:ellipsize="marquee" 
			android:background="#50000000" 
			android:textColor= "#99FFFFFF" 
			android:textColorHighlight="#FFFFFF" 
			android:text="@string/whats_new_ticker" 
			android:lines="1" 
			android:marqueeRepeatLimit="marquee_forever" 
			android:textSize="14sp" 
			android:fadingEdge="horizontal" 
			android:fadingEdgeLength="5dp" 
			android:focusable="false" 
			android:id="@+id/ticker"
			android:singleLine="true"
			android:layout_gravity="bottom|left"/>
    
</FrameLayout>