<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/space"
            android:gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/menu_background_paper" />

        <TextView
            android:id="@+id/exitDialogText"
            android:layout_width="336dp"
            android:layout_height="153dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:text="@string/exit_game"
            android:textColor="#111111"
            android:textColorHighlight="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/border_top_left" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/border_vertical_long" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/border_bottom_left" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/border_horizontal_long" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/border_horizontal_long" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/border_top_right" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/border_vertical_long" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/space"
                android:gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/border_bottom_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:orientation="horizontal"
        android:paddingBottom="70dp" >

        <FrameLayout
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/space"
                android:src="@drawable/button_large_up" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/exit_game"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/space"
                android:src="@drawable/button_large_up" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continue_game"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </FrameLayout>
    </LinearLayout>
    
</FrameLayout>